Found ned limits to both servos, better structure in servo.c and fixed some warnings

--- a/Kandidatprojekt/Kandidatprojekt/Debug/Makefile
+++ b/Kandidatprojekt/Kandidatprojekt/Debug/Makefile
@@ -50,6 +50,7 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../src/fuzzyParkingRoutine.c \
 ../src/fuzzy_speed_controller.c \
 ../src/general_FIS.c \
 ../src/main.c \
@@ -68,6 +69,7 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+src/fuzzyParkingRoutine.o \
 src/fuzzy_speed_controller.o \
 src/general_FIS.o \
 src/main.o \
@@ -79,6 +81,7 @@ src/uart_buffer.o \
 src/ASF/common/boards/user_board/init.o
 
 OBJS_AS_ARGS +=  \
+src/fuzzyParkingRoutine.o \
 src/fuzzy_speed_controller.o \
 src/general_FIS.o \
 src/main.o \
@@ -90,6 +93,7 @@ src/uart_buffer.o \
 src/ASF/common/boards/user_board/init.o
 
 C_DEPS +=  \
+src/fuzzyParkingRoutine.d \
 src/fuzzy_speed_controller.d \
 src/general_FIS.d \
 src/main.d \
@@ -101,6 +105,7 @@ src/uart_buffer.d \
 src/ASF/common/boards/user_board/init.d
 
 C_DEPS_AS_ARGS +=  \
+src/fuzzyParkingRoutine.d \
 src/fuzzy_speed_controller.d \
 src/general_FIS.d \
 src/main.d \
@@ -125,6 +130,8 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
