--- a/Kandidatprojekt/Kandidatprojekt/Debug/Makefile
+++ b/Kandidatprojekt/Kandidatprojekt/Debug/Makefile
@@ -57,6 +57,7 @@ C_SRCS +=  \
 ../src/main.c \
 ../src/manualMode.c \
 ../src/OldSteering.c \
+../src/parkingAlgorithm.c \
 ../src/pid.c \
 ../src/servo.c \
 ../src/spi_buffer_slave.c \
@@ -79,6 +80,7 @@ src/general_FIS.o \
 src/main.o \
 src/manualMode.o \
 src/OldSteering.o \
+src/parkingAlgorithm.o \
 src/pid.o \
 src/servo.o \
 src/spi_buffer_slave.o \
@@ -94,6 +96,7 @@ src/general_FIS.o \
 src/main.o \
 src/manualMode.o \
 src/OldSteering.o \
+src/parkingAlgorithm.o \
 src/pid.o \
 src/servo.o \
 src/spi_buffer_slave.o \
@@ -109,6 +112,7 @@ src/general_FIS.d \
 src/main.d \
 src/manualMode.d \
 src/OldSteering.d \
+src/parkingAlgorithm.d \
 src/pid.d \
 src/servo.d \
 src/spi_buffer_slave.d \
@@ -124,6 +128,7 @@ src/general_FIS.d \
 src/main.d \
 src/manualMode.d \
 src/OldSteering.d \
+src/parkingAlgorithm.d \
 src/pid.d \
 src/servo.d \
 src/spi_buffer_slave.d \
@@ -145,6 +150,8 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
