bug fix speed controller, ringing sound

--- a/Kandidatprojekt/Kandidatprojekt/Debug/Makefile
+++ b/Kandidatprojekt/Kandidatprojekt/Debug/Makefile
@@ -50,7 +50,7 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
-../src/CFile1.c \
+../src/backUp.c \
 ../src/counter16b.c \
 ../src/FLC_speed.c \
 ../src/fuzzyParkingAlgorithm.c \
@@ -77,7 +77,7 @@ ASM_SRCS +=
 
 
 OBJS +=  \
-src/CFile1.o \
+src/backUp.o \
 src/counter16b.o \
 src/FLC_speed.o \
 src/fuzzyParkingAlgorithm.o \
@@ -97,7 +97,7 @@ src/uart_buffer.o \
 src/ASF/common/boards/user_board/init.o
 
 OBJS_AS_ARGS +=  \
-src/CFile1.o \
+src/backUp.o \
 src/counter16b.o \
 src/FLC_speed.o \
 src/fuzzyParkingAlgorithm.o \
@@ -117,7 +117,7 @@ src/uart_buffer.o \
 src/ASF/common/boards/user_board/init.o
 
 C_DEPS +=  \
-src/CFile1.d \
+src/backUp.d \
 src/counter16b.d \
 src/FLC_speed.d \
 src/fuzzyParkingAlgorithm.d \
@@ -137,7 +137,7 @@ src/uart_buffer.d \
 src/ASF/common/boards/user_board/init.d
 
 C_DEPS_AS_ARGS +=  \
-src/CFile1.d \
+src/backUp.d \
 src/counter16b.d \
 src/FLC_speed.d \
 src/fuzzyParkingAlgorithm.d \
