--- a/Kandidatprojekt/Kandidatprojekt/Debug/Makefile
+++ b/Kandidatprojekt/Kandidatprojekt/Debug/Makefile
@@ -61,6 +61,7 @@ C_SRCS +=  \
 ../src/main.c \
 ../src/manualMode.c \
 ../src/newFuzzySteering.c \
+../src/nFuzzySteering.c \
 ../src/OldSteering.c \
 ../src/pid.c \
 ../src/servo.c \
@@ -89,6 +90,7 @@ src/intersection.o \
 src/main.o \
 src/manualMode.o \
 src/newFuzzySteering.o \
+src/nFuzzySteering.o \
 src/OldSteering.o \
 src/pid.o \
 src/servo.o \
@@ -110,6 +112,7 @@ src/intersection.o \
 src/main.o \
 src/manualMode.o \
 src/newFuzzySteering.o \
+src/nFuzzySteering.o \
 src/OldSteering.o \
 src/pid.o \
 src/servo.o \
@@ -131,6 +134,7 @@ src/intersection.d \
 src/main.d \
 src/manualMode.d \
 src/newFuzzySteering.d \
+src/nFuzzySteering.d \
 src/OldSteering.d \
 src/pid.d \
 src/servo.d \
@@ -152,6 +156,7 @@ src/intersection.d \
 src/main.d \
 src/manualMode.d \
 src/newFuzzySteering.d \
+src/nFuzzySteering.d \
 src/OldSteering.d \
 src/pid.d \
 src/servo.d \
@@ -175,6 +180,8 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
